Update profile photo and fix empty content gap on home page
- Replace profile.png with new headshot
- Hide empty .content div on home page to remove blank space
  between the hero and footer

--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -111,4 +111,9 @@ img[align=right] { margin-left: 3%; }
   @media (max-width: 768px) {
     padding: 1.5rem $padding-x-small;
   }
+
+  // Don't add padding/space when the home page content div is empty
+  &:empty {
+    display: none;
+  }
 }
